// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsEditor Default props and rendering verifies the snapshot for the component 1`] = `
Array [
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-width-hd-inner ajc-text-black ajc-font-default ajc-flex-justify-left"
  >
    <h2
      className="ajc-font-paragraph-heading"
    >
      Click the button below to add new items to your document:
    </h2>
  </div>,
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-left ajc-spacing-top-reduced"
  >
    <button
      className="ajc-button ajc-font-default ajc-button-grey"
      id="add-new-item-button"
      onClick={[Function]}
      title="Add a new item to your document."
      type="button"
    >
      Add New Item
    </button>
  </div>,
  <span
    className="ajc-display-none"
    id="add-new-item-user-value"
  />,
]
`;

exports[`ControlsEditor Transferred props and rendering - All properties custom set verifies the snapshot for the component 1`] = `
Array [
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-width-hd-inner ajc-text-black ajc-font-default ajc-flex-justify-left ajc-spacing-top-large"
  >
    <h2
      className="ajc-font-paragraph-heading"
    >
      Click the button below to add new items to your document:
    </h2>
  </div>,
  <div
    className="ajc-flex-row ajc-spacing-bottom-small ajc-background-transparent ajc-width-hd-inner ajc-flex-justify-left ajc-spacing-top-reduced"
  >
    <button
      className="ajc-button ajc-font-default ajc-button-red"
      id="add-new-item-button"
      onClick={[Function]}
      title="Add a new item to your document."
      type="button"
    >
      Add New Item
    </button>
  </div>,
  <span
    className="ajc-display-none"
    id="add-new-item-user-value"
  />,
]
`;
